# SysLab

./: CMakeLists.txt  README.md  main.cpp
include/: escalonador.hpp  memoria.hpp  processos.hpp  simulador.hpp
src/: escalonador.cpp  memoria.cpp  processos.cpp  simulador.cpp
ui/: mainwindow.cpp  mainwindow.hpp
